--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-<script src="ststic/cupcakes.js"></script>
+<script src="static/cupcakes.js"></script>
 
 </html>
