delete front and back end implemented

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
 <ul>
 {% for cupcake in cupcakes %}
-    <li>{{cupcake.flavor}}<button class="delete-todo" data-id="{{cupcake.id}}">X</button></li>
+    <li>{{cupcake.flavor}}<button class="delete-cupcake" data-id="{{cupcake.id}}">X</button></li>
 {% endfor %}
 </ul>
 
